--- a/FrontEnd/Default.html
+++ b/FrontEnd/Default.html
@@ -12,9 +12,9 @@
     </div>
     <div>
         <br/>
-        <label id="lblTotalWordsLeft">Total Guesses: 10</label> <label>/</label> <label id="lblTotalWordCount">98</label> <br/>
-        <label id="lblTotalDistinctWord">Distinct Words: 90</label> <br/>
-		<label id="lblCountCorrectGuesses">Incorrect Guesses: 43</label> <br/>
+        <label id="lblTotalWordsLeft">Total Guesses: TBD</label> <label>/</label> <label id="lblTotalWordCount">98</label> <br/>
+        <label id="lblTotalDistinctWord">Distinct Words: TBD</label> <br/>
+		<label id="lblCountCorrectGuesses">Incorrect Guesses: TBD</label> <br/>
     </div>	
 	
 	
