--- a/FrontEnd/Default.html
+++ b/FrontEnd/Default.html
@@ -4,7 +4,7 @@
     <title>Game Test</title>
 </head>
 <body onload="loadSong()">
-    <h1>Listen And Type - Test of Game Concept</h1>
+    <h1>Listen And Type - POC</h1>
     <div>
         <br/>
         <label id="lblSong">Song Name:</label><br/>
